Adds secondary page for about, adds content

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 				</a>
 			</div>
 			<ul class="list--unstyled navbar--links align--right">
-				<li><a href="#">Link</a></li>
+				<li><a href="about.html">About Me</a></li>
 			</ul>
 		</nav>
 		<div class="hero">
